implement user operations in user-service
